--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-*~
-*.swp
-*.swo
-.fscache
-
 Exports/
 .import/
+.import/*
 
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-*.lnk
+*~
